--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,6 @@
         </dependency>
 
         <!-- ************* END spring MVC and related dependencies ************** -->
-
+        <!-- ************* test ************** -->
     </dependencies>
 </project>
